finished about page

--- a/views/about.html
+++ b/views/about.html
@@ -12,12 +12,9 @@
             <a href='/#/contact'><h3 class='hvr-underline-from-left'>Contact</h3></a>
         </div>
         <div class='social-icons'>
-            <a href="/#/contact"><i class="fa fa-bolt" aria-hidden="true"></i> START A PROJECT</a>
-<!--
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
             <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
--->
         </div>
         <div ng-hide='menu' class='hamburger-btn' ng-click='toggleMenu(); toggleDropdown()'>
             <i class="fa fa-bars"></i>
@@ -29,21 +26,15 @@
     <div class='about-hero'>
         <div class='about-title'>
             <h2>Creative vision + attention to detail</h2>
-            <p>Here at Dawnland Creative we possess a unique combination of creative <br> vision and technical chops. When we're not hiking in the Camden Hills we <br> combine these skillsets with an obsessive attention to detail to create <br> beautiful digital experiences.</p>
-            <a href='/#/work' class='hvr-sweep-to-bottom'>View our work</a>
+            <p>I'm a full-stack web developer living in Colorado with big ambitions and varied <br> passions. When I'm not rock climbing or foraging for wild foods I combine my <br> unique creative spark with an obsessive attention to detail to create beautiful <br>  digital experiences.</p>
+            <a href='/#/work' class='hvr-sweep-to-bottom'>View my work</a>
         </div>    
     </div>
 
     <div class='my-face'><img src='Images/prof.jpg'/></div>
     <div class='about-me'>
-        <h4>Hey, I’m Logan (the founder of Dawnland Creative). I started this small <br> company with the goal of helping fellow Mainers succeed with modern <br> websites. As someone who’s worked online for many years, I’m acutely <br> aware of the ever-increasing importance of digital strategy, and the<br> massive impact a professional website can make on business. 
-         </h4>
-        
-        <p>Based near the ocean in Rockport, it is my belief that effective design is <br> rooted in simplicity and clarity of message (not flashy animations and <br> complex interfaces), and I work with clients to distill their brand’s "voice" <br> so they connect with visitors and stand out online. While I specialize in <br> web design, I’m also experienced in copywriting and video production <br> and love the creative process of bringing a company’s vision to life. 
-        </p>
-        <p>      
-The process of working with us is simple. We’ll start by gaining clarity on <br> your company’s message and goals, digging below the surface to uncover <br> what specific language and media will “hook” your target audience. From <br> that foundation of clarity and purpose, we’ll dive into the design process, <br> activating maximum creativity(!) to develop a site you adore. And finally, <br> once you’re 100% happy with the finished product, we’ll launch your <br> new website to the world. Have a project in mind? Browse through <br><a href="/#/work">our work</a> and, if you like what you see, <a href="/#/contact">reach out</a>! 
-        </p>
+            <h4>A paradox of sorts, I’m a web developer who loves being in nature, <br> practices handstands and backflips in his spare time, and cares <br> deeply about the health of the planet. I believe this gives me a <br> unique perspective from which to interface with the digital world.</h4>
+            <p>A "creative-type" at heart, I approah my work from a right-brained, idea <br> oriented place – thinking about the <em>why</em>, <em>what</em> and <em>how</em> behind the code I <br> write. I also have a firm grasp of the technical fundamentals which, coupled <br> with my borderline obsessive attention to detail, allows me to create clean <br> and impactful digital experiences. I still have a ton to learn, but I'm proud <br> of the apps I've built thus far. </p>
         <div class='about-explore-buttons'>
             <a href='/#/' class='hvr-sweep-to-bottom'>Home</a>
             <a href='/#/work' class='hvr-sweep-to-bottom'>Work</a>
@@ -54,10 +45,10 @@ The process of working with us is simple. We’ll start by gaining clarity on <b
         <img src='Images/logan3.png' class="logan"/>
         <div class='bottom-social'>
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
-            <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
+            <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
         </div>
-        <p>	&copy; LOGAN MARSHALL 2016</p>
+        <p>&copy; LOGAN MARSHALL 2019</p>
     </div>
 
 </div>
