--- a/views/home.html
+++ b/views/home.html
@@ -78,7 +78,7 @@
         <div class='proj-title2'>
             <h3>My Skillset</h3>
             <div class='proj-description'>
-                <h4>Hungry for knowledge and constantly learning, I'm proficient in <br> HTML5, CSS3, Javascript, jQuery, React, Redux, Angular, NodeJs, <br> Express, PostgreSQL and MongoDb. I thrive when I'm challenged <br> to expand my skillset and tackle difficult new problems.</h4>
+                <h4>Hungry for knowledge and constantly learning, I'm proficient in <br> HTML5, CSS3, Javascript, jQuery, React, Redux, Angular, NodeJs, <br> Express, PostgreSQL and MongoDb. I thrive when I'm challenged <br> to expand my skillset and tackle new and difficult problems.</h4>
             </div>
         </div>
     </div>
@@ -99,6 +99,6 @@
             <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
         </div>
-        <p>	&copy; LOGAN G MARSHALL 2019</p>
+        <p>&copy; LOGAN MARSHALL 2019</p>
     </div>
 </div>
