--- a/views/work.html
+++ b/views/work.html
@@ -12,12 +12,10 @@
             <a href='/#/contact'><h3 class='hvr-underline-from-left'>Contact</h3></a>
         </div>
         <div class='social-icons'>
-            <a href="/#/contact"><i class="fa fa-bolt" aria-hidden="true"></i> START A PROJECT</a>
-<!--
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
             <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
--->
+
         </div>
         <div ng-hide='menu' class='hamburger-btn' ng-click='toggleMenu(); toggleDropdown()'>
             <i class="fa fa-bars"></i>
@@ -29,8 +27,8 @@
     
     <div class='work-banner'>
         <div class='work-title'>
-            <h2>We make the online world more beautiful.</h2>
-            <p>With an emphasis on clean minimal design, we're continually striving <br> to create elegant and impactful digital experiences. Here are a few <br> recent examples of our work, made with love in Rockport, Maine.</p>
+            <h2>My recent projects.</h2>
+            <p>One of my favorite things about coding is the unremittingly challenging <br> process of taking an idea and turning it into a beautiful and intuitive <br> user experience. I'm continually striving to improve my skillset, but <br> here are a few recent examples of my work.</p>
         </div>
     </div>
     <div class='t-timeline'>
