--- a/style.css
+++ b/style.css
@@ -602,6 +602,7 @@ a {
     padding-bottom: 30px;
     margin: 0;
     text-transform: uppercase;
+    letter-spacing: 0.02em;
 }
 
 .about-title span {
@@ -613,7 +614,7 @@ a {
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
-    background-color: #986B4D;
+    background-color: #4385F5;
     padding: 18px;
     font-size: 0.8em;
     font-weight: 600;
@@ -637,8 +638,7 @@ a {
     width: 100%;
     height: 200px;
     display: flex;
-    margin-top: 15px;
-    margin-bottom: 55px;
+    margin: 45px 0 45px 0;
 }
 
 .my-face img {
@@ -692,7 +692,7 @@ a {
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
-    background-color: #986B4D;
+    background-color: #4385F5;
     padding: 14px 40px;
     font-size: 0.8em;
     font-weight: 600;
