--- a/views/about.html
+++ b/views/about.html
@@ -13,7 +13,7 @@
         </div>
         <div class='social-icons'>
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
-            <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
+            <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
         </div>
         <div ng-hide='menu' class='hamburger-btn' ng-click='toggleMenu(); toggleDropdown()'>
