--- a/views/contact.html
+++ b/views/contact.html
@@ -12,12 +12,10 @@
             <a href='/#/contact'><h3 class='hvr-underline-from-left'>Contact</h3></a>
         </div>
         <div class='social-icons'>
-            <a href="/#/contact"><i class="fa fa-bolt" aria-hidden="true"></i> START A PROJECT</a>
-<!--
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
-            <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
+            <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
--->
+
         </div>
         <div ng-hide='menu' class='hamburger-btn' ng-click='toggleMenu(); toggleDropdown()'>
             <i class="fa fa-bars"></i>
@@ -29,9 +27,9 @@
     
     <div class='work-banner'>
         <div class='work-title'>
-            <h2>Start a project.</h2>
-            <p>Have a project in mind? Reach out. We'll respond ASAP.</p>
-            <a href='mailto:logangmarshall@gmail.com' class='hvr-sweep-to-bottom'>Send us an email <i class="fa fa-paper-plane" aria-hidden="true"></i></a>
+            <h2>Get in touch.</h2>
+            <p>I'm currently transitioning into the software industry and am <br> open to potential job opportunities. Feel free to reach out, I'd <br> love to hear from you.</p>
+            <a href='mailto:logangmarshall@gmail.com' class='hvr-sweep-to-bottom'>Send me an email <i class="fa fa-paper-plane" aria-hidden="true"></i></a>
         </div>
     </div>
     
@@ -50,13 +48,13 @@
     </div>
     
     <div class='bottom'>
-        <img src='Images/logo3.png'/>
+        <img src='Images/logan3.png' class="logan"/>
         <div class='bottom-social'>
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
-            <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
+            <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
         </div>
-        <p>	&copy; LOGAN MARSHALL 2016</p>
+        <p>	&copy; LOGAN MARSHALL 2019</p>
     </div>
     
 </div>
