--- a/views/work.html
+++ b/views/work.html
@@ -13,7 +13,7 @@
         </div>
         <div class='social-icons'>
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
-            <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
+            <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
 
         </div>
@@ -27,29 +27,32 @@
     
     <div class='work-banner'>
         <div class='work-title'>
-            <h2>My recent projects.</h2>
+            <h2>My recent projects</h2>
             <p>One of my favorite things about coding is the unremittingly challenging <br> process of taking an idea and turning it into a beautiful and intuitive <br> user experience. I'm continually striving to improve my skillset, but <br> here are a few recent examples of my work.</p>
         </div>
     </div>
-    <div class='t-timeline'>
+    <div class='project-banner' id="open-road">
         <div class='timeline-description'>
-            <h1>Veda Jewlery</h1>
-            <p>A lifestyle brand for those seeking a beautiful life</p>
-            <a href='http://vedaforlife.com/' target="_blank" class='hvr-sweep-to-bottom'>Visit site <i class="fa fa-external-link" aria-hidden="true"></i></a>
+            <h1>Open Road</h1>
+            <h3>Plan and share your next great road trip adventure</h3>
+            <p>React | Redux | Node | Express | PostgreSQL | Google Maps API | Redis | AWS s3</p>
+            <a href='https://github.com/bfojas/road-trip' target="_blank" class='hvr-sweep-to-bottom'>View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
         </div>
     </div>
-    <div class='c-construction'>
+    <div class='project-banner' id="wild-fed">
         <div class='timeline-description'>
-            <h1>Cooper Construction</h1>
-            <p>Crafting homes as beautiful as the island they're based on</p>
-            <a href='http://loganxc12.github.io/cooper-construction/index.html' target="_blank" class='hvr-sweep-to-bottom'>Visit site <i class="fa fa-external-link" aria-hidden="true"></i></a>
+            <h1>Wild Fed</h1>
+            <h3>Track your wild food foraging through the seasons</h3>
+            <p>React | Redux | Node | Express | PostgreSQL | Auth0 | Google Maps API </p>
+            <a href='https://github.com/loganxc12/wild-food-app' target="_blank" class='hvr-sweep-to-bottom'>View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
         </div>
     </div>
-    <div class='p-pomify'>
+    <div class='project-banner' id='pomify'>
         <div class='timeline-description'>
             <h1>Pomify</h1>
-            <p>A worldwide Pomodoro community and competition</p>
-            <a href='#' target="_blank" class='hvr-sweep-to-bottom'>Visit site <i class="fa fa-external-link" aria-hidden="true"></i></a>
+            <h3>Harness the full power of the Pomodoro Technique</h3>
+            <p>Angular | Node | Express | MongoDb | Mongoose | ChartJs | Passport </p>
+            <a href='https://github.com/loganxc12/pomodoro-app' target="_blank" class='hvr-sweep-to-bottom'>View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
         </div>
     </div>
     <div class='footer'>
@@ -63,13 +66,13 @@
         </div>
     </div>
     <div class='bottom'>
-        <img src='Images/logo3.png'/>
+        <img src='Images/logan3.png' class="logan" />
         <div class='bottom-social'>
             <a href='https://www.instagram.com/logangressmarshall' target='_blank'><i class="fa fa-instagram"></i></a>
-            <a href='https://www.linkedin.com/in/logan-marshall-7389872a' target='_blank'><i class="fa fa-linkedin"></i></a>
+            <a href='https://www.linkedin.com/in/logangmarshall/' target='_blank'><i class="fa fa-linkedin"></i></a>
             <a href='https://github.com/loganxc12' target='_blank'><i class="fa fa-github"></i></a>
         </div>
-        <p>	&copy; LOGAN MARSHALL 2016</p>
+        <p>	&copy; LOGAN MARSHALL 2019</p>
     </div>
 
 
