about page edit

--- a/views/home.html
+++ b/views/home.html
@@ -34,14 +34,14 @@
     </div>
     <div class='info'>
         <div class='info-title'>
-            <h4>Hey, my name is Logan. I'm a full-stack web developer and <br> creative builder of things. This site is where I showcase my <br> creations and share my learning process. If you want to see <br> what I've been up to lately, scroll down.</h4>
+            <h4>Hi, my name is Logan. I'm a full-stack web developer and <br> creative builder of things. This site is where I showcase my <br> creations and share my learning process. If you want to see <br> what I've been up to lately, scroll down.</h4>
         </div>
     </div>
     <div class='projects'>
         <div class='proj-title'>
             <h3>Recent Projects</h3>
             <div class='proj-description'>
-                <h4>A graduate of DevMountain in Phoenix, here are a few <br> of my recent personal projects. I still have a ton to learn, <br> but I'm proud of the apps I've built so far and am excited <br> to tackle bigger, better projects in the future. </h4>
+                <h4>A graduate of DevMountain in Phoenix, here are a few of my <br> recent personal projects. I still have a ton to learn, but I'm <br> proud of the apps I've built so far and am excited to tackle  <br> bigger, better projects in the future. </h4>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
             <div class='overlay'>
                 <div class='text'>
                     <h1>Open Road</h1>
-                    <p>React app for planning road trips; uses the Google Maps API heavily.</p>
+                    <p>React app for planning road trips; built with the Google Maps API.</p>
                     <a href="https://github.com/bfojas/road-trip" target="_blank">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <div class='overlay'>
                 <div class='text'>
                     <h1>Wild Fed</h1>
-                    <p>React app designed to help users learn the craft of foraging for wild foods.</p>
+                    <p>React app that helps users learn the craft of foraging for wild foods.</p>
                     <a href="https://github.com/loganxc12/wild-food-app" target="_blank">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
             <div class='overlay'>
                 <div class='text'>
                     <h1>Pomify</h1>
-                    <p>MEAN stack web app that helps users harness the full power of the Pomodoro Technique.</p>
+                    <p>MEAN stack app for harnessing the power of the Pomodoro technique.</p>
                     <a href="https://github.com/loganxc12/pomodoro-app">View Project <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -78,7 +78,7 @@
         <div class='proj-title2'>
             <h3>My Skillset</h3>
             <div class='proj-description'>
-                <h4>Hungry for knowledge and constantly learning, I'm proficient in <br> HTML5, CSS3, Javascript, jQuery, React, Redux, Angular, NodeJs, <br> Express, PostgreSQL and MongoDb. I thrive when I'm challenged <br> to expand my skillset and tackle new and difficult problems.</h4>
+                <h4>Hungry for knowledge and constantly learning, I'm proficient <br> in HTML, CSS, Javascript, jQuery, React, Redux, Angular, NodeJs, <br> Express, PostgreSQL and MongoDb. I thrive when I'm challenged <br> to expand my skillset and tackle new and difficult problems.</h4>
             </div>
         </div>
     </div>
