--- a/views/work.html
+++ b/views/work.html
@@ -28,7 +28,7 @@
     <div class='work-banner'>
         <div class='work-title'>
             <h2>My recent projects</h2>
-            <p>One of my favorite things about coding is the unremittingly challenging <br> process of taking an idea and turning it into a beautiful and intuitive <br> user experience. I'm continually striving to improve my skillset, but <br> here are a few recent examples of my work.</p>
+            <p>One of my favorite things about coding is the creative process <br> of taking an idea and turning it into a beautiful and intuitive user <br> experience. Here are a few examples of ideas I've had, and the <br> applications they've become.</p>
         </div>
     </div>
     <div class='project-banner' id="open-road">
