--- a/views/contact.html
+++ b/views/contact.html
@@ -29,7 +29,9 @@
         <div class='work-title'>
             <h2>Get in touch</h2>
             <p>I'm currently transitioning into the software industry and am <br> open to potential job opportunities. Feel free to reach out, I'd <br> love to hear from you.</p>
-            <a href='mailto:logangmarshall@gmail.com' class='hvr-sweep-to-bottom'>Send me an email <i class="fa fa-paper-plane" aria-hidden="true"></i></a>
+            <p><strong>EMAIL:</strong> logangmarshall@gmail.com</p>
+            <p><strong>PHONE:</strong> (207) 450-1067</p>
+            <!-- <a href='mailto:logangmarshall@gmail.com' class='hvr-sweep-to-bottom'>Send me an email <i class="fa fa-paper-plane" aria-hidden="true"></i></a> -->
         </div>
     </div>
     
